--- a/src/index.css
+++ b/src/index.css
@@ -33,6 +33,7 @@ margin: -0.6rem;
   padding-right: 7rem;
   clip-path: polygon(0 0, 100% 0, 60% 100%, 0 100%);
   filter: drop-shadow(6px 5px 4px -3px #cde3f8);
+  cursor: pointer;
 
 }
 .Header .info {
@@ -40,6 +41,7 @@ margin: -0.6rem;
   align-items: center;
   height: 5.3rem;
   
+  cursor: pointer;
 
 
 }
@@ -54,6 +56,8 @@ display: flex;
 padding: 2px 0.6rem;
 margin-right: 1rem;
 box-shadow: 6px 5px 4px -3px #cde3f8;
+cursor: pointer;
+
 }
 .Header .profile-info {
   border-radius: 4px;
@@ -95,6 +99,8 @@ overflow: hidden;
   height: 7.5rem;
   border-bottom: 1px solid rgba(0, 0, 0, 0.037);
   box-shadow: 6px 6px 3px -3px rgba(0, 0, 0, 0.037);
+  cursor: pointer;
+
 
 }
  .profile img{
@@ -104,6 +110,7 @@ overflow: hidden;
   background-size: cover;
   background-position: center center;
   margin-bottom: 0.6rem;
+  cursor: pointer;
 
  }
  .Sidebar ul{
@@ -119,6 +126,8 @@ overflow: hidden;
   box-shadow: 1px 1px 6px -2px rgba(0, 0, 0, 0.331);
   border-top-right-radius: 10px;
   border-bottom-right-radius: 10px;
+  cursor: pointer;
+
 
  }
  .items:hover{
@@ -134,6 +143,8 @@ overflow: hidden;
   margin-top: 8.7rem;
   color: #0f45a3;
   background-color: #e0ebf8;
+  cursor: pointer;
+
  }
  .logout:hover{
   background-color: #dae8f9;
